--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-I have no idea how this works but something is going to come up.
+<!doctype html>
+
+<html>
+<head>
+  <title> Nguyen Binh </title>
+  
+  <link rel="stylesheet" href="main.css">
+  
+</head>
+
+<body>
+  <h1>Nguyen Binh</h1>
+  <p>I have no idea how this works but something will come up some day.</p>
+  
+</body>
+</html>  
+  
