--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 
 <html>
 <head>
-  <title> Nguyen Binh </title>
+  <title> Nguyễn Bình </title>
   
   <link rel="stylesheet" href="main.css">
   
 </head>
 
 <body>
-  <h1>Nguyen Binh</h1>
+  <h1>Nguyễn Bình</h1>
   <p>I have no idea how this works but something will come up some day.</p>
   
 </body>
 </html>  
   
+theme: MINIMAL
