--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
-						<a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -31,8 +30,8 @@
 						<!-- Me -->
 							<article id="home" class="panel intro">
 								<header>
-									<h1>Nguyễn Bình</h1>
-									<p>"Die Philosophen haben die Welt nur verschieden interpretiert; es kommt darauf an, sie zu verändern."</p>
+									<h1>Nguyễn Bình (they/them)</h1>
+									<p>"Steward Observatory, University of Arizona"</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
