--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Nguyễn Bình (they/them)</h1>
-									<p>"Steward Observatory, University of Arizona"</p>
+									<p>Steward Observatory, University of Arizona</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
