--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
+						<a href="#research" class="icon solid fa-laptop"><span>Research</span></a>
+						<a href="#art" class="icon solid fa-book"><span>Art</span></a>
 						<a href="#contact" class="icon solid fa-phone"><span>Contact</span></a>
 					</nav>
 
