--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#research" class="icon solid fa-laptop"><span>Research</span></a>
 						<a href="#art" class="icon solid fa-book"><span>Art</span></a>
-						<a href="#contact" class="icon solid fa-phone"><span>Contact</span></a>
+						<a href="#contact" class="icon solid fa-mail"><span>Contact</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -40,7 +40,7 @@
 								</a>
 							</article>
 
-						<!-- Work -->
+						<!-- Research -->
 							<article id="work" class="panel">
 								<header>
 									<h2>Work</h2>
@@ -92,6 +92,60 @@
 								</section>
 							</article>
 
+						<!-- Art -->
+							<article id="work" class="panel">
+								<header>
+									<h2>Work</h2>
+								</header>
+								<p>
+									Before and at the same time as my astronomy career, I also work as a writer, a translator, a graphic
+									artist, while also dabbling in photography and music. My main focus is poetry; I compose poems in 
+									Vietnamese, English and French with an appreciation for both free verse and classical poetic forms
+									(sonnets, lục bát, alexandrines, to name a few). Between 2019 and 2021, I also worked on a translation 
+									of the medieval Vietnamese novel-in-verse Tale of Kiều (Truyện Kiều) into English heroic couplets.
+								</p>
+								<section>
+									<div class="row">
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
+										</div>
+									</div>
+								</section>
+							</article>
+						
 						<!-- Contact -->
 							<article id="contact" class="panel">
 								<header>
