--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#research" class="icon solid fa-laptop"><span>Research</span></a>
 						<a href="#art" class="icon solid fa-book"><span>Art</span></a>
-						<a href="#contact" class="icon solid fa-mail"><span>Contact</span></a>
+						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -41,7 +41,7 @@
 							</article>
 
 						<!-- Research -->
-							<article id="work" class="panel">
+							<article id="research" class="panel">
 								<header>
 									<h2>Work</h2>
 								</header>
@@ -93,7 +93,7 @@
 							</article>
 
 						<!-- Art -->
-							<article id="work" class="panel">
+							<article id="art" class="panel">
 								<header>
 									<h2>Work</h2>
 								</header>
