--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
 								</header>
 								<p>
 									Before and at the same time as my astronomy career, I also work as a writer, a translator, a graphic
-									artist, while also dabbling in photography and music. My main focus is poetry; I compose poems in 
-									Vietnamese, English and French with an appreciation for both free verse and classical poetic forms
+									artist, while also dabbling in photography and music. My main focus is poetry; I write poems in 
+									Vietnamese, English and French with a combination of both free verse and classical forms
 									(sonnets, lục bát, alexandrines, to name a few). Between 2019 and 2021, I also worked on a translation 
-									of the medieval Vietnamese novel-in-verse Tale of Kiều (Truyện Kiều) into English heroic couplets.
+									of the medieval Vietnamese novel-in-verse <i>Tale of Kiều</i> (Truyện Kiều) into English heroic couplets.
 								</p>
 								<header>
 									<h3>Selected Artworks</h3>
