--- a/index.html
+++ b/index.html
@@ -46,9 +46,13 @@
 									<h2>RESEARCH</h2>
 								</header>
 								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
+									I am currently an undergraduate research assistant in the
+									<a href="https://sites.google.com/view/thebeslagroup/home">The Besla Group</a>, where I work 
+									with Dr. Gurtina Besla to understand the way in which the dark matter mass profiles and kinematics 
+									of ultra-faint dwarfs evolve across cosmic time, using high-resolution, zoom-in cosmological 
+									simulations. Ultra-faint dwarfs (UFDs) are an interesting type of object which contains few stars
+									but is dominated by dark matter, making them an ideal counterexample to the popular notion that
+									dark matter, whatever it is, always goes hand in hand with ordinary baryonic matter.
 								</p>
 								<section>
 									<div class="row">
