--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 									<h2>RESEARCH</h2>
 								</header>
 								<p>
-									I am currently an undergraduate research assistant in the
+									I am currently an undergraduate research assistant in
 									<a href="https://sites.google.com/view/thebeslagroup/home">The Besla Group</a>, where I work 
 									with Dr. Gurtina Besla to understand the way in which the dark matter mass profiles and kinematics 
 									of ultra-faint dwarfs evolve across cosmic time, using high-resolution, zoom-in cosmological 
