--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 									I am currently an undergraduate research assistant in
 									<a href="https://sites.google.com/view/thebeslagroup/home">The Besla Group</a>, where I work 
 									with Dr. Gurtina Besla to understand how the dark matter mass profiles and kinematics 
-									of ultra-faint dwarfs evolve across cosmic time, using high-resolution, zoom-in cosmological 
-									simulations. Ultra-faint dwarfs (UFDs) are an interesting type of object which contains few stars
+									of ultra-faint dwarfs (UFDs) evolve across cosmic time, using high-resolution, zoom-in cosmological 
+									simulations. UFDs are an interesting type of object which contains few stars
 									but is dominated by dark matter, making them an ideal counterexample to the popular notion that
 									dark matter, whatever it is, always goes hand in hand with ordinary baryonic matter.
 								</p>
