--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Nav -->
 					<nav id="nav">
-						<a href="#" class="icon solid fa-home"><span>Home</span></a>
+						<a href="#about" class="icon solid fa-portrait"><span>About</span></a>
 						<a href="#research" class="icon solid fa-laptop"><span>Research</span></a>
 						<a href="#art" class="icon solid fa-book"><span>Art</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
