--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 				<!-- Nav -->
 					<nav id="nav">
+						<a href="#" class="icon solid fa-house"><span>Home</span></a>
 						<a href="#about" class="icon solid fa-portrait"><span>About</span></a>
 						<a href="#research" class="icon solid fa-laptop"><span>Research</span></a>
 						<a href="#art" class="icon solid fa-book"><span>Art</span></a>
@@ -28,7 +29,7 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Me -->
+						<!-- Home -->
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Nguyễn Bình (they/them)</h1>
@@ -40,6 +41,33 @@
 								</a>
 							</article>
 
+						<!-- About -->
+							<article id="about" class="panel">
+								<header>
+									<h2>ABOUT</h2>
+								</header>
+								<p>
+									I am Nguyễn Bình (IPA: [ŋwiən˦ˀ˥ ʔɓïŋ˨˩]), a non-binary undergraduate student at the University of
+									Arizona. My main academic interest is in astronomy, but I became fascinated with linguistics in my
+									first year at the U of A, hence a double major in Astronomy and Linguistics.<br>
+									<br>
+									I am a native of Hanoi, Vietnam, and being born in such an old and historic city has 
+									inevitably inspired in me an undying appreciation for culture. I carry my native culture everywhere
+									I go, quoting Vietnamese folk songs in my writing and thinking about the existential loneliness of 
+									Bà Huyện Thanh Quan's poetry while stationed in an astronomical observatory in the mountains.
+								</p>
+								<section>
+									<div class="row">
+										<div class="col-4 col-6-medium col-12-medium">
+											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-medium">
+											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
+										</div>
+									</div>
+								</section>
+							</article>
+						
 						<!-- Research -->
 							<article id="research" class="panel">
 								<header>
