--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Nav -->
 					<nav id="nav">
-						<a href="#" class="icon solid fa-house"><span>Home</span></a>
+						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#about" class="icon solid fa-portrait"><span>About</span></a>
 						<a href="#research" class="icon solid fa-laptop"><span>Research</span></a>
 						<a href="#art" class="icon solid fa-book"><span>Art</span></a>
@@ -58,11 +58,11 @@
 								</p>
 								<section>
 									<div class="row">
-										<div class="col-4 col-6-large col-12-large">
-											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+										<div class="col-4 col-6-medium col-12-large">
+											<a href="#" class="image fit"><img src="images/20190129_153323.jpg" alt=""></a>
 										</div>
-										<div class="col-4 col-6-large col-12-large">
-											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
+										<div class="col-4 col-6-medium col-12-large">
+											<a href="#" class="image fit"><img src="images/P1250982.JPG" alt=""></a>
 										</div>
 									</div>
 								</section>
