--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									first year at the U of A, hence a double major in Astronomy and Linguistics.<br>
 									<br>
 									I am a native of Hanoi, Vietnam, and being born in such an old and historic city has 
-									inevitably inspired in me an undying appreciation for culture. I carry my native culture everywhere
+									inevitably inspired in me an undying affinity for culture. I carry my native culture everywhere
 									I go, quoting Vietnamese folk songs in my writing and thinking about the existential loneliness of 
 									Bà Huyện Thanh Quan's poetry while stationed in an astronomical observatory on the mountains.
 								</p>
