--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
 								</header>
 								<section>
 									<div>
-  										<img src="voyager1.png" style="float: left;" />
-									  	<img src="Minaret.png" style="float: left;" />
+  										<img src="images/voyager1.png" style="float: left;" />
+									  	<img src="images/Minaret.png" style="float: left;" />
 									</div>
 								<p>
 									“The Dome’s Goodbye”, read at The University of Arizona Department 
