--- a/index.html
+++ b/index.html
@@ -149,10 +149,15 @@
 									<h3>Selected Artworks</h3>
 								</header>
 								<section>
-									<div>
-  										<img src="images/voyager1.png" style="float: left;" height="400" width="auto" />
-									  	<img src="images/Minaret.png" style="float: left;" height="400" width="auto"/>
+									<div class="row">
+										<div class="col-4 col-6-medium col-12-small">
+											<img src="images/voyager1.png" style="float: left;" height="400" width="auto" />
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<img src="images/Minaret.png" style="float: left;" height="400" width="auto"/>
+										</div>
 									</div>
+								</section>
 								<p>
 									“The Dome’s Goodbye”, read at The University of Arizona Department 
 									of Astronomy and Steward Observatory’s Graduation Ceremony, May 13, 2021.<br>
