--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 									<i>Viết & Đọc</i>. Spring 2020. 143-158.
 								</p>
 								<header>
-									<h3>Selected Artworks</h3>
+									<h3>Selected Designs</h3>
 								</header>
 								<section>
 									<div class="row">
