--- a/index.html
+++ b/index.html
@@ -149,14 +149,8 @@
 									<h3>Selected Designs</h3>
 								</header>
 								<section>
-									<div class="row">
-										<div class="col-4 col-6-medium col-12-small">
-											<img src="images/voyager1.png" style="float: left;" height="400" width="auto" />
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<img src="images/Minaret.png" style="float: left;" height="400" width="auto"/>
-										</div>
-									</div>
+									<img src="images/voyager1.png" style="margin: 5px 5px 5px 5px;" height="400" width="auto" />
+									<img src="images/Minaret.png" style="margin: 5px 5px 5px 5px;" height="400" width="auto"/>
 								</section>
 								<p>
 									“The Dome’s Goodbye”, read at The University of Arizona Department 
