--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<!-- About -->
 							<article id="about" class="panel">
 								<header>
-									<h2><b>ABOUT</b></h2>
+									<h2>ABOUT</h2>
 								</header>
 								<p>
 									I am <b>Nguyễn Bình</b> (IPA: <b>[ŋwiən˦ˀ˥ ʔɓïŋ˨˩]</b>), a non-binary undergraduate student at the University of
@@ -71,7 +71,7 @@
 						<!-- Research -->
 							<article id="research" class="panel">
 								<header>
-									<h2><b>RESEARCH</b></h2>
+									<h2>RESEARCH</h2>
 								</header>
 								<p>
 									I am currently an undergraduate research assistant in
@@ -127,7 +127,7 @@
 						<!-- Art -->
 							<article id="art" class="panel">
 								<header>
-									<h2><b>ART</b></h2>
+									<h2>ART</h2>
 								</header>
 								<p>
 									Before and at the same time as my astronomy career, I also work as a writer, a translator, a graphic
@@ -149,8 +149,8 @@
 									<h3>Selected Designs</h3>
 								</header>
 								<section>
-									<img src="images/voyager1.png" style="margin: 6px 6px 6px 6px;" height="400" width="auto" />
-									<img src="images/Minaret.png" style="margin: 6px 6px 6px 6px;" height="400" width="auto"/>
+									<img src="images/voyager1.png" style="margin: 5px 5px 5px 5px;" height="400" width="auto" />
+									<img src="images/Minaret.png" style="margin: 5px 5px 5px 5px;" height="400" width="auto"/>
 								</section>
 								
 							</article>
@@ -158,7 +158,7 @@
 						<!-- Contact -->
 							<article id="contact" class="panel">
 								<header>
-									<h2><b>CONTACT</b></h2>
+									<h2>CONTACT</h2>
 								</header>
 								<form action="#" method="post">
 									<div>
