--- a/index.html
+++ b/index.html
@@ -81,9 +81,12 @@
 									simulations. UFDs are an interesting type of object which contains few stars
 									but is dominated by dark matter, making them an ideal counterexample to the popular notion that
 									dark matter, whatever it is, always goes hand in hand with ordinary baryonic matter.
+									
+									Below is an animation showing how the dark matter density of a simulated UFD evolves from
+									high to low redshifts. 
 								</p>
 								<section>
-									<video width="576" height="432" controls>
+									<video class="center" width="576" height="432" controls>
 										<source src="this-is-so-cool.mp4" type="video/mp4">
 									Your browser does not support the video tag.
 									</video>
