--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 									but is dominated by dark matter, making them an ideal counterexample to the popular notion that
 									dark matter, whatever it is, always goes hand in hand with ordinary baryonic matter.
 									
-									Below is an animation showing how the dark matter density of a simulated UFD evolves from
-									high to low redshifts. 
+									Below is a cool animation showing how the dark matter density of a simulated UFD evolves from
+									high to low redshifts. The contour plots used for this animation were extracted from my research code.
 								</p>
 								<section>
 									<video class="center" width="576" height="432" controls>
