--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 									simulations. UFDs are an interesting type of object which contains few stars
 									but is dominated by dark matter, making them an ideal counterexample to the popular notion that
 									dark matter, whatever it is, always goes hand in hand with ordinary baryonic matter.
-									
+									<br>
 									Below is a cool animation showing how the dark matter density of a simulated UFD evolves from
-									high to low redshifts. The contour plots used for this animation were extracted from my research code.
+									high to low redshifts. The contour plots used for this animation were generated my research code.
 								</p>
 								<section>
 									<video class="center" width="576" height="432" controls>
