--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 									artist, while also dabbling in photography and music. My main focus is poetry; I write poems in 
 									Vietnamese, English and French with a combination of both free verse and classical forms
 									(sonnets, lục bát, alexandrines, to name a few). Between 2019 and 2021, I also worked on a translation 
-									of the medieval Vietnamese novel-in-verse <i>Tale of Kiều</i> (Truyện Kiều) into English heroic couplets,
-									and you can find my introduction to the translation here.
+									of the medieval Vietnamese novel-in-verse <i>Tale of Kiều</i> (Truyện Kiều) into English heroic 
+									couplets. You can find my introduction to the translation here.
 								</p>
 								<header>
 									<h3>Selected Poems</h3>
