--- a/index.html
+++ b/index.html
@@ -131,11 +131,24 @@
 					</div>
 
 				<!-- Footer -->
-					<div id="footer">
-						<ul class="copyright">
-							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</div>
+					<footer id="footer">
+						<div class="inner">
+							<section>
+								<p><b> binhnguyen @ email.arizona.edu</b></p>
+								<p> 933 N Cherry Ave. Tucson AZ 85721</p>
+							
+							</section>
+							<section>
+								<ul class="icons">
+									<!-- <li><a href="https://github.com/nguyenbinh1612" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="mailto:binhnguyen@email.arizona.edu" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+								</ul>
+							</section>
+							<ul class="copyright">
+								<li>&copy; Nguyễn Bình.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							</ul>
+						</div>
+					</footer>
 
 			</div>
 
