--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 					<footer id="footer">
 						<div class="inner">
 							<section>
-								<p><b> binhnguyen @ email.arizona.edu</b></p>
-								<p> 933 N Cherry Ave. Tucson AZ 85721</p>
+								<p>binhnguyen @ email.arizona.edu</p>
+								<p>933 N Cherry Ave, Tucson AZ 85721, United States</p>
 							
 							</section>
 							<section>
