--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
 							</section>
 							<section>
 								<ul class="icons">
-									<!-- <li><a href="https://github.com/nguyenbinh1612" class="icon solid fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="mailto:binhnguyen@email.arizona.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+									<a href="https://github.com/nguyenbinh1612" class="icon solid fa-github-square"><span>GitHub</span></a>
+									<a href="mailto:binhnguyen@email.arizona.edu" class="icon solid fa-envelope"><span>Email</span></a>
 								</ul>
 							</section>
 							<ul class="copyright">
