--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 					<footer id="footer">
 						<div class="inner">
 							<section>
-								<p>binhnguyen @ email.arizona.edu<br>933 N Cherry Ave, Tucson AZ 85721, United States</p>
+								<p>binhnguyen @ email.arizona.edu<br>933 North Cherry Ave, Tucson AZ 85721, United States</p>
 							</section>
 							<section>
 								<ul class="icons">
