--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<p>binhnguyen @ email.arizona.edu<br>933 North Cherry Ave, Tucson AZ 85721, United States</p>
+							<p>binhnguyen @ email.arizona.edu<br>933 N Cherry Ave, Tucson AZ 85721, United States</p>
 						</section>
 						<a href="https://github.com/nguyenbinh1612" class="icon solid fa-github-square"><span>GitHub</span></a>
 						<a href="mailto:binhnguyen@email.arizona.edu" class="icon solid fa-envelope"><span>Email</span></a>
