--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 						<section>
 							<p>binhnguyen @ email.arizona.edu<br>933 N Cherry Ave, Tucson AZ 85721, United States</p>
 						</section>
-						<a href="https://github.com/nguyenbinh1612" class="icon solid fa-github-square"><span>GitHub</span></a>
+						<a href="https://github.com/nguyenbinh1612" class="icon solid fa-github"><span>GitHub</span></a>
 						<a href="mailto:binhnguyen@email.arizona.edu" class="icon solid fa-envelope"><span>Email</span></a>
 					</footer>
 
