--- a/index.html
+++ b/index.html
@@ -132,11 +132,13 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
-							<p>binhnguyen@email.arizona.edu<br>933 N Cherry Ave, Tucson AZ 85721, United States</p>
-							<a href="https://github.com/nguyenbinh1612" class="icon solid fa-github"><span>GitHub</span></a>
-							<a href="mailto:binhnguyen@email.arizona.edu" class="icon solid fa-envelope"><span>Email</span></a>
-						</section>
+						<p>binhnguyen@email.arizona.edu<br>933 North Cherry Avenue, Tucson AZ 85721, United States</p>
+						<a href="https://github.com/nguyenbinh1612">
+							<span class="fa-github-square"><span>GitHub</span></span>
+						</a>
+						<a href="mailto:binhnguyen@email.arizona.edu">
+							<span class="fa-envelope"><span>Email</span></span>
+						</a>
 					</footer>
 
 			</div>
