--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
 					<footer id="footer">
 						<p>binhnguyen@email.arizona.edu<br>933 North Cherry Avenue, Tucson AZ 85721, United States</p>
 						<a href="https://github.com/nguyenbinh1612">
-							<span class="fa-github-square"><span>GitHub</span></span>
+							<span class="fab fa-github-square"><span>GitHub</span></span>
 						</a>
 						<a href="mailto:binhnguyen@email.arizona.edu">
-							<span class="fa-envelope"><span>Email</span></span>
+							<span class="icon solid fa-envelope"><span>Email</span></span>
 						</a>
 					</footer>
 
