--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p>binhnguyen@email.arizona.edu<br>933 North Cherry Avenue, Tucson AZ 85721, United States</p>
+						<p>binhnguyen@email.arizona.edu<br>933 N Cherry Ave, Tucson AZ 85721, United States</p>
 						<a href="https://github.com/nguyenbinh1612">
 							<span class="fab fa-github-square"><span>GitHub</span></span>
 						</a>
