--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<p>binhnguyen@email.arizona.edu<br>933 N Cherry Ave, Tucson Arizona 85721, United States</p>
+					<nav id="footer">
+						<p>binhnguyen@email.arizona.edu<br>933 N Cherry Ave, Tucson AZ 85721, United States</p>
 						<a href="https://github.com/nguyenbinh1612" class="fab fa-github-square"><span>GitHub</span></a>
 						<a href="mailto:binhnguyen@email.arizona.edu" class="icon solid fa-envelope"><span>Email</span></a>
-					</footer>
+					</nav>
 
 			</div>
 
