--- a/index.html
+++ b/index.html
@@ -132,20 +132,16 @@
 
 				<!-- Footer -->
 					<footer id="footer">
+						<p>binhnguyen@email.arizona.edu<br>933 N Cherry Ave, Tucson AZ 85721, United States</p>
 					<section>
-						<h2>Contact:</h2>
 						<ul class="icons">
-							<!-- <li><a href="https://twitter.com/katiechambe" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li> -->
-							<li><a href="https://github.com/katiechambe" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="mailto:katiechambe@email.arizona.edu" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://github.com/nguyenbinh1612" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="mailto:binhnguyen@email.arizona.edu" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 					</section>
 					<ul class="copyright">
-						<li>&copy; Nguyễn Bình. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Nguyễn Bình.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
-						<p>binhnguyen@email.arizona.edu<br>933 N Cherry Ave, Tucson AZ 85721, United States</p>
-						<a href="https://github.com/nguyenbinh1612" class="fab fa-github-square"><span>GitHub</span></a>
-						<a href="mailto:binhnguyen@email.arizona.edu" class="icon solid fa-envelope"><span>Email</span></a>
 					</footer>
 				
 
