--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 					</section>
 						<p>binhnguyen@email.arizona.edu<br>933 N Cherry Ave, Tucson AZ 85721, United States</p>
 					<ul class="copyright">
-						<li>&copy; Nguyễn Bình.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Nguyễn Bình</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 					</footer>
 				
