--- a/index.html
+++ b/index.html
@@ -134,8 +134,12 @@
 					<footer id="footer">
 					<section>
 						<ul class="icons">
-							<a href="https://github.com/nguyenbinh1612" class="icon brands style2 fa-github"><span class="label">GitHub</span></a>
-							<a href="mailto:binhnguyen@email.arizona.edu" class="icon solid style2 fa-envelope"><span class="label">Email</span></a>
+							<li><a href="https://github.com/nguyenbinh1612" class="icon brands style2 fa-github">
+								<span class="label">GitHub</span>
+								</a></li>
+							<li><a href="mailto:binhnguyen@email.arizona.edu" class="icon solid style2 fa-envelope">
+								<span class="label">Email</span>
+								</a></li>
 						</ul>
 					</section>
 						<p>binhnguyen@email.arizona.edu<br>933 N Cherry Ave, Tucson AZ 85721, United States</p>
