--- a/index.html
+++ b/index.html
@@ -132,18 +132,15 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-					<section>
-						<ul class="icons">
-							<a href="https://github.com/nguyenbinh1612" class="icon brands style2 fa-github fa-lg"><span class="label">GitHub</span></a>
-							<a style="padding-left:20px;" href="mailto:binhnguyen@email.arizona.edu" class="icon solid style2 fa-envelope fa-lg"><span class="label">Email</span></a>
-						</ul>
+					<ul class="icons">
+						<a href="https://github.com/nguyenbinh1612" class="icon brands style2 fa-github fa-2x"><span class="label">GitHub</span></a>
+						<a style="padding-left:20px;" href="mailto:binhnguyen@email.arizona.edu" class="icon solid style2 fa-envelope fa-2x"><span class="label">Email</span></a>
+					</ul>
 					<p>binhnguyen@email.arizona.edu<br>933 N Cherry Ave, Tucson AZ 85721, United States</p>
-					</section>
 					<ul class="copyright">
 						<li>&copy; Nguyễn Bình</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 					</footer>
-				
 
 			</div>
 
