--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 									<h1>Nguyễn Bình (they/them)</h1>
 									<p>Undergraduate Student in Astronomy and Linguistics, University of Arizona</p>
 								</header>
-								<img src="images/giaolinh.jpg" alt="" />
+								<a href="#" class="jumplink pic">
+									<img src="images/giaolinh.jpg" alt="" />
+								</a>
 							</article>
 
 						<!-- About -->
