--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#about" class="icon solid fa-portrait"><span>About</span></a>
 						<a href="#research" class="icon solid fa-laptop"><span>Research</span></a>
+						<a href="#outreach" class="icon solid fa-bullhorn"><span>Outreach</span></a>
 						<a href="#art" class="icon solid fa-book"><span>Art</span></a>
 					</nav>
 
@@ -92,6 +93,29 @@
 									</center>
 								</section>
 							</article>
+						
+						<!-- Outreach -->
+							<article id="outreach" class="panel">
+								<header>
+									<h2>OUTREACH</h2>
+								</header>
+								<p>
+									Growing up in a light-polluted Southeast Asian country where astronomy remains underdeveloped, I
+									view public outreach as a potential tool to inspire more aspiring astronomers from 
+									underrepresented communities and help the field prosper. Therefore, outside of my curricular
+									pursuits, I work as an operator of the 21” Raymond E. White, Jr. Telescope at Steward Observatory 
+									on campus, where I engage in science communication with members of the public who come to
+									visit. 
+									<br><br>
+									In Vietnam, I am also a frequent contributor to Tia Sáng, the official magazine of the Ministry 
+									of Science and Technology, and my articles in the magazine focus on topics in astronomy which 
+									I think deserve more attention. In the most recent series of articles, I take a look at the debate 
+									around the current definition of galaxies and ask what it can tell us about the way in which 
+									science defines things. You can find a complete list of my published articles 
+									<a href="https://tiasang.com.vn/tac-gia/nguyen-binh-1677">here</a>.
+								</p>
+							</article>
+
 
 						<!-- Art -->
 							<article id="art" class="panel">
