--- a/index.html
+++ b/index.html
@@ -102,18 +102,21 @@
 								<p>
 									Growing up in a light-polluted Southeast Asian country where astronomy remains underdeveloped, I
 									view public outreach as a potential tool to inspire more aspiring astronomers from 
-									underrepresented communities and help the field prosper. Therefore, outside of my curricular
-									pursuits, I work as an operator of the 21” Raymond E. White, Jr. Telescope at Steward Observatory 
-									on campus, where I engage in science communication with members of the public who come to
-									visit. 
-									<br><br>
-									In Vietnam, I am also a frequent contributor to Tia Sáng, the official magazine of the Ministry 
-									of Science and Technology, and my articles in the magazine focus on topics in astronomy which 
-									I think deserve more attention. In the most recent series of articles, I take a look at the debate 
-									around the current definition of galaxies and ask what it can tell us about the way in which 
-									science defines things. You can find a complete list of my published articles 
+									underrepresented communities and help the field prosper. Therefore, in Vietnam, I am a frequent 
+									contributor to Tia Sáng, the official magazine of the Ministry of Science and Technology, 
+									and my articles in the magazine focus on topics in astronomy which I think deserve more attention. 
+									In the most recent series of articles, I take a look at the debate around the current definition 
+									of galaxies and ask what it can tell us about the way in which science defines things. 
+									You can find a complete list of my published articles 
 									<a href="https://tiasang.com.vn/tac-gia/nguyen-binh-1677">here</a>.
+									<br><br>
+									In the United States, I also work as an operator of the 21” Raymond E. White, Jr. Telescope 
+									at Steward Observatory on campus, where I engage in science communication with members 
+									of the public who come to visit.
 								</p>
+								<div class="col-4 col-6-large col-12-large">
+									<a href="#" class="image fit"><img src="images/P1210302.JPG" alt=""></a>
+								</div>
 							</article>
 
 
