--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
 									You can find a complete list of my published articles 
 									<a href="https://tiasang.com.vn/tac-gia/nguyen-binh-1677">here</a>.
 									<br><br>
-									In the United States, I also work as an operator of the 21” Raymond E. White, Jr. Telescope 
-									at Steward Observatory on campus, where I engage in science communication with members 
-									of the public who come to visit.
+									In the United States, besides my curricular studies and research, I also work as an operator 
+									of the 21” Raymond E. White, Jr. Telescope at Steward Observatory on campus, where I engage 
+									in science communication with members of the public who come to visit.
 								</p>
 								<div class="col-4 col-6-large col-12-large">
-									<a href="#" class="image fit"><img src="images/P1210302.JPG" alt=""></a>
+									<a href="#" class="image fit"><img src="images/P1240254.JPG" alt=""></a>
 								</div>
 							</article>
 
