--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 								<p>
 									Growing up in a light-polluted Southeast Asian country where astronomy remains underdeveloped, I
 									view public outreach as a potential tool to inspire more aspiring astronomers from 
-									underrepresented communities and help the field prosper. Therefore, in Vietnam, I am a frequent 
+									minoritized communities and help the field prosper. Therefore, in Vietnam, I am a frequent 
 									contributor to Tia Sáng, the official magazine of the Ministry of Science and Technology, 
 									and my articles in the magazine focus on topics in astronomy which I think deserve more attention. 
 									In the most recent series of articles, I take a look at the debate around the current definition 
