--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 									in science communication with members of the public who come to visit.
 								</p>
 								<div class="col-4 col-6-large col-12-large">
-									<a href="#" class="image fit"><img src="images/P1240254.JPG" alt=""></a>
+									<a class="image fit"><img src="images/P1240254.JPG" alt=""></a>
 								</div>
 							</article>
 
