--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-large col-12-medium">
-											<a href="#" class="image fit"><img src="images/P1250982.JPG" alt=""></a>
+											<a class="image fit"><img src="images/P1250982.JPG" alt=""></a>
 										</div>
 										<div class="col-4 col-6-large col-12-medium">
-											<a href="#" class="image fit"><img src="images/P1210302.JPG" alt=""></a>
+											<a class="image fit"><img src="images/P1210302.JPG" alt=""></a>
 										</div>
 									</div>
 								</section>
