--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 								</header>
 								<p>
 									Growing up in a light-polluted Southeast Asian country where astronomy remains underdeveloped, I
-									view public outreach as a potential tool to inspire more aspiring astronomers from 
+									view public outreach as a potential tool to encourage more aspiring astronomers from 
 									minoritized communities and help the field prosper. Therefore, in Vietnam, I am a frequent 
 									contributor to Tia Sáng, the official magazine of the Ministry of Science and Technology, 
 									and my articles in the magazine focus on topics in astronomy which I think deserve more attention. 
