--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 									<a href="https://tiasang.com.vn/tac-gia/nguyen-binh-1677">here</a>.
 									<br><br>
 									In the United States, besides my curricular work and research, I am also employed as an operator 
-									of the 21” Raymond E. White, Jr. Telescope at Steward Observatory on campus, where I engage 
+									of the 21” Raymond E. White, Jr. Telescope at Steward Observatory on campus (pictured below), where I engage 
 									in science communication with members of the public who come to visit.
 								</p>
 								<div class="col-4 col-6-large col-12-large">
