--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 					<ul class="icons">
 						<a href="https://github.com/nguyenbinh1612" class="icon brands style2 fa-github fa-2x"><span class="label">GitHub</span></a>
 						<a style="padding-left:20px;" href="mailto:binhnguyen@email.arizona.edu" class="icon solid style2 fa-envelope fa-2x"><span class="label">Email</span></a>
-						<a href="https://n9uy3nb1nh.wordpress.com" class="icon brands style2 fa-wordpress fa-2x"><span class="label">WordPress</span></a>
+						<a style="padding-left:20px;" href="https://n9uy3nb1nh.wordpress.com" class="icon brands style2 fa-wordpress fa-2x"><span class="label">WordPress</span></a>
 					</ul>
 					<p>binhnguyen@email.arizona.edu<br>933 N Cherry Ave, Tucson AZ 85721, United States</p>
 					<ul class="copyright">
