--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
 									<h2>RESEARCH</h2>
 								</header>
 								<p>
+									<a href="nguyenbinh1612.github.io/documents/CV_Binh.pdf" target="_blank">CV</a>
+									<br><br>
 									I am currently an undergraduate research assistant in
 									<a href="https://sites.google.com/view/thebeslagroup/home">The Besla Group</a>, where I work 
 									with Dr. Gurtina Besla to understand how the dark matter mass profiles and kinematics 
