--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 									<h2>RESEARCH</h2>
 								</header>
 								<p>
-									<a href="nguyenbinh1612.github.io/documents/CV_Binh.pdf" target="_blank">CV</a>
+									<a href="https://github.com/nguyenbinh1612/nguyenbinh1612.github.io/blob/main/documents/CV_Binh.pdf" target="_blank">CV</a>
 									<br><br>
 									I am currently an undergraduate research assistant in
 									<a href="https://sites.google.com/view/thebeslagroup/home">The Besla Group</a>, where I work 
