--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								<p>
 									<a href="https://nguyenbinh1612.github.io/documents/CV_Binh.pdf" target="_blank">CV</a>
 									<br><br>
-									I am currently an undergraduate research assistant in
+									I am an undergraduate research assistant in
 									<a href="https://sites.google.com/view/thebeslagroup/home">The Besla Group</a>, where I work 
 									with Dr. Gurtina Besla to understand how the dark matter mass profiles and kinematics 
 									of ultra-faint dwarfs (UFDs) evolve across cosmic time, using high-resolution, zoom-in cosmological 
