--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 									You can find a complete list of my published articles 
 									<a href="https://tiasang.com.vn/tac-gia/nguyen-binh-1677">here</a>.
 									<br><br>
-									In the United States, besides my curricular work and research, I am also employed as an operator 
+									In the United States, besides my curricular work and research, I am employed as an operator 
 									of the 21” Raymond E. White, Jr. Telescope at Steward Observatory on campus (pictured below), where I engage 
 									in science communication with members of the public who come to visit.
 								</p>
