--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 								<section>
 									<center>
 										<video width="576" height="432" controls>
-											<source src="this-is-so-cool.mp4" type="video/mp4">
+											<source src="animation.mp4" type="video/mp4">
 										Your browser does not support the video tag.
 										</video>
 									</center>
