--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 									<h2>ART</h2>
 								</header>
 								<p>
-									Before and at the same time as my astronomy career, I also work as a writer, a translator, a singer-keyboardist
+									Before and at the same time as my astronomy career, I also work as a writer, a translator, a singer-songwriter
 									while also dabbling in photography and graphic design. My main focus is poetry; I write poems in 
 									Vietnamese, English and French with a combination of both free verse and classical forms
 									(sonnets, lục bát, alexandrines, to name a few). Between 2019 and 2021, I finished and published 
