--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
 									dark matter, whatever it is, always goes hand in hand with ordinary baryonic matter.
 									<br><br>
 									In Summer 2022, I was also an intern at the summer program of the Space Telescope Science Institute,
-									where I worked with Dr. Anna Wright and the <a href="https://foggie.science/who-we-are.html">FOGGIE</a> team 
-									to study the stellar halo of a Milky Way-mass galaxy (that is, a galaxy as heavy as our Milky Way)
-									in cosmological simulations. The stellar halo of such a galaxy is where one can find remnants of the
-									small satellite galaxies that the big one has eaten in order to grow up (galactic cannibalism, yikes!).
+									where I worked with Dr. Anna Wright (Johns Hopkins University) and the 
+									<a href="https://foggie.science/who-we-are.html">FOGGIE</a> team to study the stellar halo of a Milky Way-mass galaxy 
+									(that is, a galaxy as heavy as our Milky Way) in cosmological simulations. The stellar halo of such a galaxy is where 
+									one can find remnants of the tiny satellite galaxies that the big one has eaten in order to grow up (galactic cannibalism, yikes!).
 									If you're interested in the results of my project, my final symposium presentation can be found
 									<a href="https://www.stsci.edu/opportunities/space-astronomy-summer-program/archived-student-presentations">here</a>!
 									<br><br>
