--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 									Linguistics in May 2023.<br>
 									<br>
 									I am a native of Hanoi, Vietnam. Being born in such an old and historic city has 
-									inevitably inspired in me an undying affinity for culture. I carry my native culture everywhere
-									I go, quoting Vietnamese folk songs in my writing and thinking about the existential loneliness of 
+									inevitably inspired in me an undying affinity for culture. I carry my culture everywhere
+									I go, quoting Vietnamese folk songs in my writings and thinking about the existential loneliness of 
 									Bà Huyện Thanh Quan's poetry while stationed in an astronomical observatory on the mountains.
 								</p>
 								<section>
