--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 									<a href="https://tiasang.com.vn/author/nguyen-binh-1677/">here</a>.
 								</p>
 								<div class="col-4 col-6-large col-12-large">
-									<a class="image fit"><img src="images/P1240254.JPG" alt=""></a>
+									<a class="image fit"><img src="images/P1240254.jpg" alt=""></a>
 								</div>
 							</article>
 
