--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@
 					<footer id="footer">
 					<ul class="icons">
 						<a href="https://github.com/nguyenbinh1612" class="icon brands style2 fa-github fa-2x"><span class="label">GitHub</span></a>
-						<a style="padding-left:20px;" href="mailto:binhnguyen@arizona.edu" class="icon solid style2 fa-envelope fa-2x"><span class="label">Email</span></a>
+						<a style="padding-left:20px;" href="mailto:ngbinh@uw.edu" class="icon solid style2 fa-envelope fa-2x"><span class="label">Email</span></a>
 						<a style="padding-left:20px;" href="https://n9uy3nb1nh.wordpress.com" class="icon brands style2 fa-wordpress fa-2x"><span class="label">WordPress</span></a>
 					</ul>
-					<p>binhnguyen@arizona.edu<br>933 N Cherry Ave, Tucson AZ 85721, United States</p>
+					<p>ngbinh@uw.edu<br>3910 15th Ave NE, Seattle WA 98195, United States</p>
 					<ul class="copyright">
 						<li>&copy; Nguyễn Bình</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
